--- a/Libreria_IgnacioGarcia_Maven/pom.xml
+++ b/Libreria_IgnacioGarcia_Maven/pom.xml
@@ -18,6 +18,13 @@
         <configuration>
           <source/>
           <target>1.8</target>
+          <archive>
+          	<manifest>
+            	<addClasspath>true</addClasspath>
+            	<classpathPrefix>lib/</classpathPrefix>
+            	<mainClass>com.grupoatrium.cliente.MainApp</mainClass>
+          	</manifest>
+          </archive>
         </configuration>
       </plugin>
     </plugins>
