--- a/Libreria_IgnacioGarcia_Maven/pom.xml
+++ b/Libreria_IgnacioGarcia_Maven/pom.xml
@@ -13,15 +13,15 @@
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
         <configuration>
           <source/>
           <target>1.8</target>
           <archive>
           	<manifest>
             	<addClasspath>true</addClasspath>
-            	<classpathPrefix>lib/</classpathPrefix>
             	<mainClass>com.grupoatrium.cliente.MainApp</mainClass>
           	</manifest>
           </archive>
