--- a/maven-parent/pom.xml
+++ b/maven-parent/pom.xml
@@ -19,5 +19,10 @@
   		<artifactId>spring-context</artifactId>
   		<version>${spring.version}</version>
   	</dependency>
+  	<dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.12</version>
+	</dependency>
   </dependencies>
 </project>
