--- a/maven-parent/pom.xml
+++ b/maven-parent/pom.xml
@@ -24,5 +24,10 @@
     	<artifactId>junit</artifactId>
     	<version>4.12</version>
 	</dependency>
+	<dependency>
+    	<groupId>org.seleniumhq.selenium</groupId>
+    	<artifactId>selenium-java</artifactId>
+    	<version>3.4.0</version>
+	</dependency>
   </dependencies>
 </project>
